2008-08-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.141

	* Fixed a bug in the main loop related to handling of multipliers.

	* Fixed a bug in @substitute which would touch the tree above the
	entry point, thereby disabling clean-up routines. 

2008-08-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug in the GUI which would corrupt the notebook upon
	removing the last cell.

2008-07-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Started adding @factor_out (not yet completed).

2008-07-19  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* One last scrolling bug fixed...

2008-07-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made some changes to @substitute so that \hasprop can be applied
	to more general patterns. Added some documentation to the pattern
	section to explain this.

	* Changed \div to \frac (though this will eventually go away
	altogether). 

2008-07-16  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed scrolling behaviour of the GUI once more...

	* Fixed a bug in prodcollectnum which would touch the tree above
	the entry point and thereby broke subtle cases of substitute which
	relied on the entry point containing a zero multiplier for
	vanishing terms (see test 6 in defaults.cdb).

2008-07-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.139

	* Various improvements/fixes to GUI notebook view focus.

	* Fixed a bug which would leave the tree in inconsistent state
	after some uses of @unwrap.

	* Squashed a bug which would apply default rules on the wrong
	expression. 

2008-07-05  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Deleting an input cell now correctly re-positions the cursor in
	the next input cell or open TeX cell.

2008-07-04  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug which would make patterns occurring at any level
	other than the first always be treated as patterns, never as
	literal. This would mess up @collect_terms on e.g.
